<resources>
    <string name="app_name">Demo App</string>

    <string name="facebook_app_id">2147388201955563</string>
    <string name="facebook_login_protocol_scheme">fb2147388201955563</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="birthday">birthday</string>
    <string name="friends">friends</string>
    <string name="location">Location</string>
    <string name="get_location">Get Location</string>
    <string name="logout">Logout</string>
    <string name="welcome_to">Welcome to</string>
    <string name="demo_app">Demo App</string>
</resources>
