<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detailbg"
    tools:context="com.example.hp_pc.facebookauth.UserDetailActivity">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:src="@drawable/com_facebook_profile_picture_blank_portrait"
            app:civ_border_width="1dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_below="@id/topPanel"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/secondLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/line"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/layoutbg"
            android:text="@string/email"
            android:padding="10dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:background="@drawable/layoutbg"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:background="@drawable/layoutbg"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:background="@drawable/layoutbg"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textAlignment="center"/>

    </LinearLayout>


    <Button
        android:id="@+id/locationuser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:layout_alignStart="@+id/logout"
        android:background="@drawable/buttonbg"
        android:text="@string/get_location"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:layout_marginBottom="20dp"/>

    <Button android:id="@+id/logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonbg"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#ffffff"/>

</RelativeLayout>
